# superfan-contracts

./: Anchor.toml
migrations/: deploy.ts
programs/superfan-contracts/: Cargo.toml
programs/superfan-contracts/src/: contexts.rs  errors.rs  events.rs  lib.rs  state.rs
programs/superfan-contracts/src/handlers/: config.rs  liquidity.rs  market.rs  mod.rs  payouts.rs  positions.rs  reputation.rs  signal.rs
sdk/: client.ts
tests/: superfan-contracts.ts
